[project]
name = "OceanVerse"
version = "0.1.0"
description = "Benchmark code for OceanVerse"
requires-python = ">=3.9,<=3.10"
readme = "README.md"
dependencies = [
    "h5py==3.14.0",
    "huggingface-hub==0.36.0",
    "numpy==1.24.1",
    "pandas==2.1.4",
    "PyKrige==1.7.2",
    "PyYAML==6.0.2",
    "scikit-learn==1.3.2",
    "scipy==1.11.4",
    "torch==2.1.1",
    "torch_geometric==2.4.0",
    "xarray==2024.6.0",
]
